<resources>
    <string name="app_name">Chordiagram</string>
    <string name="converter_tab_text">Converter</string>
    <string name="chords_tab_text">All Chords</string>
    <string name="chord_diagram">Chord Diagram</string>
    <string name="conversion_hint">Enter the chords you want to convert.\n\nC A7 Dm G C Cmaj7</string>
    <string name="convert">Convert</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_message">No results match your input</string>

    <!-- Menu -->
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="show_all">Show All</string>
    <string name="major">Major</string>
    <string name="minor">Minor</string>
    <string name="seven">Seven</string>
    <string name="diminished">Diminished</string>
    <string name="augmented">Augmented</string>
    <string name="nine">Nine</string>
    <string name="six">Six</string>
</resources>